// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ColorEditor > should render correctly for background color with data binding 1`] = `
<div>
  <div
    class="awsui_root_18582_z63vw_99 awsui_vertical_18582_z63vw_146 awsui_vertical-s_18582_z63vw_158"
  >
    <div
      class="awsui_child_18582_z63vw_103"
    >
      <div
        class="awsui_root_14mhv_av9zi_174"
        data-analytics-field-label="[id="formField:r0:-label"]"
      >
        <div
          class=""
        >
          <label
            class="awsui_label_14mhv_av9zi_210"
            for="formField:r0:"
            id="formField:r0:-label"
          >
            Define background color
          </label>
        </div>
        <div
          class="awsui_controls_14mhv_av9zi_246"
        >
          <div
            class="awsui_grid_14yj0_1lwse_99"
          >
            <div
              class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-12_14yj0_1lwse_264"
            >
              <div
                class="awsui_restore-pointer-events_14yj0_1lwse_314"
              >
                <div
                  class="awsui_control_14mhv_av9zi_246"
                >
                  <div
                    class="awsui_root_r2vco_wvvus_99"
                    data-testid="motion-indicator-color-select"
                  >
                    <div
                      class="awsui_root_qwoo0_1ea5w_149"
                    >
                      <div
                        class=""
                        id=":r6:"
                      >
                        <button
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-labelledby="formField:r0:-label select-arialabel-:r4: trigger-content-:r8:"
                          class="awsui_button-trigger_18eso_syr88_103 awsui_has-caret_18eso_syr88_170"
                          id="formField:r0:"
                          type="button"
                        >
                          <span
                            class="awsui_trigger_dwuol_18z0d_122"
                            id="trigger-content-:r8:"
                          >
                            Add color rule
                          </span>
                          <span
                            class="awsui_arrow_18eso_syr88_103"
                          >
                            <span
                              class="awsui_icon_h11ix_1l964_104 awsui_size-normal-mapped-height_h11ix_1l964_158 awsui_size-normal_h11ix_1l964_154 awsui_variant-normal_h11ix_1l964_230"
                            >
                              <svg
                                aria-hidden="true"
                                focusable="false"
                                viewBox="0 0 16 16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  class="filled stroke-linejoin-round"
                                  d="M4 5h8l-4 6-4-6z"
                                />
                              </svg>
                            </span>
                          </span>
                        </button>
                      </div>
                      <div
                        tabindex="-1"
                      />
                      <div>
                        <div
                          tabindex="-1"
                        />
                        <div
                          aria-hidden="true"
                          class="awsui_dropdown_qwoo0_1ea5w_99 awsui-visual-refresh awsui_hide-block-border_qwoo0_1ea5w_281 awsui_refresh_qwoo0_1ea5w_120 awsui_stretch-beyond-trigger-width_qwoo0_1ea5w_277"
                          data-animating="false"
                          data-open="false"
                          id="dialog:r3:"
                          style="--awsui-dropdown-default-max-width-iof9y8: 465px;"
                        >
                          <div
                            class="awsui_dropdown-content-wrapper_qwoo0_1ea5w_99 awsui_refresh_qwoo0_1ea5w_120"
                          >
                            <div
                              class="awsui_dropdown-content_qwoo0_1ea5w_99"
                            >
                              <ul
                                aria-labelledby="select-arialabel-:r4: formField:r0:"
                                class="awsui_options-list_19gcf_halkh_99"
                                id="option-list:r2:"
                                role="listbox"
                                style="position: relative;"
                                tabindex="-1"
                              />
                              <div
                                class="awsui_root_1afi9_5kqbd_99 awsui_hidden_1afi9_5kqbd_133"
                              >
                                <div
                                  id="footer:r5:"
                                />
                                <span
                                  class="awsui_root_xttbq_pgwjg_99 awsui_root_3bgfn_im8v7_5"
                                >
                                  <span
                                    aria-atomic="true"
                                    aria-live="polite"
                                  />
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          tabindex="-1"
                        />
                      </div>
                    </div>
                    <span
                      class="awsui_root_xttbq_pgwjg_99"
                      id="select-arialabel-:r4:"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="awsui_child_18582_z63vw_103"
    >
      <div
        class="awsui_root_14mhv_av9zi_174"
        data-analytics-field-label="[id="formField:r9:-label"]"
      >
        <div
          class=""
        >
          <label
            class="awsui_label_14mhv_av9zi_210"
            for="formField:r9:"
            id="formField:r9:-label"
          >
            Background
          </label>
        </div>
        <div
          class="awsui_controls_14mhv_av9zi_246"
        >
          <div
            class="awsui_grid_14yj0_1lwse_99"
          >
            <div
              class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-12_14yj0_1lwse_264"
            >
              <div
                class="awsui_restore-pointer-events_14yj0_1lwse_314"
              >
                <div
                  class="awsui_control_14mhv_av9zi_246"
                >
                  <div
                    class="awsui_grid_14yj0_1lwse_99"
                  >
                    <div
                      class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-10_14yj0_1lwse_244"
                    >
                      <div
                        class="awsui_restore-pointer-events_14yj0_1lwse_314"
                      >
                        <button
                          class="awsui_button_vjswe_12tek_107 awsui_variant-normal_vjswe_12tek_158"
                          data-analytics-funnel-value="button:ra:"
                          data-testid="opacity-button"
                          type="submit"
                        >
                          <span
                            class="awsui_content_vjswe_12tek_103"
                          >
                            Opacity : 50%
                            <div
                              class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_m-left-xs_18wu0_1elzt_881 awsui_d-inline_18wu0_1elzt_1039 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                            >
                              <span
                                class="awsui_icon_h11ix_1l964_104 awsui_size-normal-mapped-height_h11ix_1l964_158 awsui_size-normal_h11ix_1l964_154 awsui_variant-normal_h11ix_1l964_230 awsui_name-caret-right-filled_h11ix_1l964_260"
                              >
                                <svg
                                  aria-hidden="true"
                                  focusable="false"
                                  viewBox="0 0 16 16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    class="filled stroke-linejoin-round"
                                    d="M5 4v8l6-4-6-4z"
                                  />
                                </svg>
                              </span>
                            </div>
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                  <div
                    class="awsui_grid_14yj0_1lwse_99"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="awsui_child_18582_z63vw_103"
    >
      <div
        class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_p-top-s_18wu0_1elzt_641 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-bold_18wu0_1elzt_414"
      >
        Configure Rule
      </div>
    </div>
    <div
      class="awsui_child_18582_z63vw_103"
    >
      <div
        data-testid="DataBindingEditor"
      >
        [{"component":{"ref":"componentRef1","type":"MotionIndicator","uri":"componentUri","modelType":"componentModelType","shape":"LinearPlane","valueDataBindings":{"backgroundColor":{"ruleBasedMapId":"rule-1"},"foregroundColor":{"ruleBasedMapId":"rule-2"}},"config":{"numOfRepeatInY":4,"backgroundColorOpacity":0.5,"defaultBackgroundColor":"red","defaultForegroundColor":"blue"}},"dataBindingName":"backgroundColor"},{}]
      </div>
    </div>
  </div>
</div>
`;

exports[`ColorEditor > should render correctly for background color with slider and color picker shown 1`] = `
<div>
  <div
    class="awsui_root_18582_z63vw_99 awsui_vertical_18582_z63vw_146 awsui_vertical-s_18582_z63vw_158"
  >
    <div
      class="awsui_child_18582_z63vw_103"
    >
      <div
        class="awsui_root_14mhv_av9zi_174"
        data-analytics-field-label="[id="formField:ro:-label"]"
      >
        <div
          class=""
        >
          <label
            class="awsui_label_14mhv_av9zi_210"
            for="formField:ro:"
            id="formField:ro:-label"
          >
            Define background color
          </label>
        </div>
        <div
          class="awsui_controls_14mhv_av9zi_246"
        >
          <div
            class="awsui_grid_14yj0_1lwse_99"
          >
            <div
              class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-12_14yj0_1lwse_264"
            >
              <div
                class="awsui_restore-pointer-events_14yj0_1lwse_314"
              >
                <div
                  class="awsui_control_14mhv_av9zi_246"
                >
                  <div
                    class="awsui_root_r2vco_wvvus_99"
                    data-testid="motion-indicator-color-select"
                  >
                    <div
                      class="awsui_root_qwoo0_1ea5w_149"
                    >
                      <div
                        class=""
                        id=":ru:"
                      >
                        <button
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-labelledby="formField:ro:-label select-arialabel-:rs: trigger-content-:r10:"
                          class="awsui_button-trigger_18eso_syr88_103 awsui_has-caret_18eso_syr88_170"
                          id="formField:ro:"
                          type="button"
                        >
                          <span
                            class="awsui_trigger_dwuol_18z0d_122"
                            id="trigger-content-:r10:"
                          >
                            Select color
                          </span>
                          <span
                            class="awsui_arrow_18eso_syr88_103"
                          >
                            <span
                              class="awsui_icon_h11ix_1l964_104 awsui_size-normal-mapped-height_h11ix_1l964_158 awsui_size-normal_h11ix_1l964_154 awsui_variant-normal_h11ix_1l964_230"
                            >
                              <svg
                                aria-hidden="true"
                                focusable="false"
                                viewBox="0 0 16 16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  class="filled stroke-linejoin-round"
                                  d="M4 5h8l-4 6-4-6z"
                                />
                              </svg>
                            </span>
                          </span>
                        </button>
                      </div>
                      <div
                        tabindex="-1"
                      />
                      <div>
                        <div
                          tabindex="-1"
                        />
                        <div
                          aria-hidden="true"
                          class="awsui_dropdown_qwoo0_1ea5w_99 awsui-visual-refresh awsui_hide-block-border_qwoo0_1ea5w_281 awsui_refresh_qwoo0_1ea5w_120 awsui_stretch-beyond-trigger-width_qwoo0_1ea5w_277"
                          data-animating="false"
                          data-open="false"
                          id="dialog:rr:"
                          style="--awsui-dropdown-default-max-width-iof9y8: 465px;"
                        >
                          <div
                            class="awsui_dropdown-content-wrapper_qwoo0_1ea5w_99 awsui_refresh_qwoo0_1ea5w_120"
                          >
                            <div
                              class="awsui_dropdown-content_qwoo0_1ea5w_99"
                            >
                              <ul
                                aria-labelledby="select-arialabel-:rs: formField:ro:"
                                class="awsui_options-list_19gcf_halkh_99"
                                id="option-list:rq:"
                                role="listbox"
                                style="position: relative;"
                                tabindex="-1"
                              />
                              <div
                                class="awsui_root_1afi9_5kqbd_99 awsui_hidden_1afi9_5kqbd_133"
                              >
                                <div
                                  id="footer:rt:"
                                />
                                <span
                                  class="awsui_root_xttbq_pgwjg_99 awsui_root_3bgfn_im8v7_5"
                                >
                                  <span
                                    aria-atomic="true"
                                    aria-live="polite"
                                  />
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          tabindex="-1"
                        />
                      </div>
                    </div>
                    <span
                      class="awsui_root_xttbq_pgwjg_99"
                      id="select-arialabel-:rs:"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="awsui_child_18582_z63vw_103"
    >
      <div
        class="awsui_root_14mhv_av9zi_174"
        data-analytics-field-label="[id="formField:r11:-label"]"
      >
        <div
          class=""
        >
          <label
            class="awsui_label_14mhv_av9zi_210"
            for="formField:r11:"
            id="formField:r11:-label"
          >
            Background
          </label>
        </div>
        <div
          class="awsui_controls_14mhv_av9zi_246"
        >
          <div
            class="awsui_grid_14yj0_1lwse_99"
          >
            <div
              class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-12_14yj0_1lwse_264"
            >
              <div
                class="awsui_restore-pointer-events_14yj0_1lwse_314"
              >
                <div
                  class="awsui_control_14mhv_av9zi_246"
                >
                  <div
                    class="awsui_grid_14yj0_1lwse_99"
                  >
                    <div
                      class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-2_14yj0_1lwse_164"
                    >
                      <div
                        class="awsui_restore-pointer-events_14yj0_1lwse_314"
                      >
                        <div
                          class="sc-aXZVg jqdByc"
                          data-testid="background-color-swatch"
                        />
                      </div>
                    </div>
                    <div
                      class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-10_14yj0_1lwse_244"
                    >
                      <div
                        class="awsui_restore-pointer-events_14yj0_1lwse_314"
                      >
                        <button
                          class="awsui_button_vjswe_12tek_107 awsui_variant-normal_vjswe_12tek_158"
                          data-analytics-funnel-value="button:r12:"
                          data-testid="opacity-button"
                          type="submit"
                        >
                          <span
                            class="awsui_content_vjswe_12tek_103"
                          >
                            Opacity : 50%
                            <div
                              class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_m-left-xs_18wu0_1elzt_881 awsui_d-inline_18wu0_1elzt_1039 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                            >
                              <span
                                class="awsui_icon_h11ix_1l964_104 awsui_size-normal-mapped-height_h11ix_1l964_158 awsui_size-normal_h11ix_1l964_154 awsui_variant-normal_h11ix_1l964_230"
                              >
                                <svg
                                  aria-hidden="true"
                                  focusable="false"
                                  viewBox="0 0 16 16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    class="filled stroke-linejoin-round"
                                    d="M4 5h8l-4 6-4-6z"
                                  />
                                </svg>
                              </span>
                            </div>
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                  <div
                    class="awsui_grid_14yj0_1lwse_99"
                  >
                    <div
                      class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-2_14yj0_1lwse_164"
                    >
                      <div
                        class="awsui_restore-pointer-events_14yj0_1lwse_314"
                      >
                        <div
                          class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                        />
                      </div>
                    </div>
                    <div
                      class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-10_14yj0_1lwse_244"
                    >
                      <div
                        class="awsui_restore-pointer-events_14yj0_1lwse_314"
                      >
                        <div
                          data-testid="Slider"
                        >
                          [{"value":50,"step":1,"min":"0","max":"100"},{}]
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="awsui_child_18582_z63vw_103"
    >
      <div
        data-mocked="ColorPicker"
      >
        {"color":"red"}
      </div>
    </div>
  </div>
</div>
`;

exports[`ColorEditor > should render correctly for background color with slider and color picker shown 2`] = `
<div>
  <div
    class="awsui_root_18582_z63vw_99 awsui_vertical_18582_z63vw_146 awsui_vertical-s_18582_z63vw_158"
  >
    <div
      class="awsui_child_18582_z63vw_103"
    >
      <div
        class="awsui_root_14mhv_av9zi_174"
        data-analytics-field-label="[id="formField:ro:-label"]"
      >
        <div
          class=""
        >
          <label
            class="awsui_label_14mhv_av9zi_210"
            for="formField:ro:"
            id="formField:ro:-label"
          >
            Define arrow color
          </label>
        </div>
        <div
          class="awsui_controls_14mhv_av9zi_246"
        >
          <div
            class="awsui_grid_14yj0_1lwse_99"
          >
            <div
              class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-12_14yj0_1lwse_264"
            >
              <div
                class="awsui_restore-pointer-events_14yj0_1lwse_314"
              >
                <div
                  class="awsui_control_14mhv_av9zi_246"
                >
                  <div
                    class="awsui_root_r2vco_wvvus_99"
                    data-testid="motion-indicator-color-select"
                  >
                    <div
                      class="awsui_root_qwoo0_1ea5w_149"
                    >
                      <div
                        class=""
                        id=":ru:"
                      >
                        <button
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-labelledby="formField:ro:-label select-arialabel-:rs: trigger-content-:r10:"
                          class="awsui_button-trigger_18eso_syr88_103 awsui_has-caret_18eso_syr88_170"
                          id="formField:ro:"
                          type="button"
                        >
                          <span
                            class="awsui_trigger_dwuol_18z0d_122"
                            id="trigger-content-:r10:"
                          >
                            Select color
                          </span>
                          <span
                            class="awsui_arrow_18eso_syr88_103"
                          >
                            <span
                              class="awsui_icon_h11ix_1l964_104 awsui_size-normal-mapped-height_h11ix_1l964_158 awsui_size-normal_h11ix_1l964_154 awsui_variant-normal_h11ix_1l964_230"
                            >
                              <svg
                                aria-hidden="true"
                                focusable="false"
                                viewBox="0 0 16 16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  class="filled stroke-linejoin-round"
                                  d="M4 5h8l-4 6-4-6z"
                                />
                              </svg>
                            </span>
                          </span>
                        </button>
                      </div>
                      <div
                        tabindex="-1"
                      />
                      <div>
                        <div
                          tabindex="-1"
                        />
                        <div
                          aria-hidden="true"
                          class="awsui_dropdown_qwoo0_1ea5w_99 awsui-visual-refresh awsui_hide-block-border_qwoo0_1ea5w_281 awsui_refresh_qwoo0_1ea5w_120 awsui_stretch-beyond-trigger-width_qwoo0_1ea5w_277"
                          data-animating="false"
                          data-open="false"
                          id="dialog:rr:"
                          style="--awsui-dropdown-default-max-width-iof9y8: 465px;"
                        >
                          <div
                            class="awsui_dropdown-content-wrapper_qwoo0_1ea5w_99 awsui_refresh_qwoo0_1ea5w_120"
                          >
                            <div
                              class="awsui_dropdown-content_qwoo0_1ea5w_99"
                            >
                              <ul
                                aria-labelledby="select-arialabel-:rs: formField:ro:"
                                class="awsui_options-list_19gcf_halkh_99"
                                id="option-list:rq:"
                                role="listbox"
                                style="position: relative;"
                                tabindex="-1"
                              />
                              <div
                                class="awsui_root_1afi9_5kqbd_99 awsui_hidden_1afi9_5kqbd_133"
                              >
                                <div
                                  id="footer:rt:"
                                />
                                <span
                                  class="awsui_root_xttbq_pgwjg_99 awsui_root_3bgfn_im8v7_5"
                                >
                                  <span
                                    aria-atomic="true"
                                    aria-live="polite"
                                  />
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          tabindex="-1"
                        />
                      </div>
                    </div>
                    <span
                      class="awsui_root_xttbq_pgwjg_99"
                      id="select-arialabel-:rs:"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="awsui_child_18582_z63vw_103"
    >
      <div
        class="awsui_root_14mhv_av9zi_174"
        data-analytics-field-label="[id="formField:r14:-label"]"
      >
        <div
          class=""
        >
          <label
            class="awsui_label_14mhv_av9zi_210"
            for="formField:r14:"
            id="formField:r14:-label"
          >
            Arrow color
          </label>
        </div>
        <div
          class="awsui_controls_14mhv_av9zi_246"
        >
          <div
            class="awsui_grid_14yj0_1lwse_99"
          >
            <div
              class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-12_14yj0_1lwse_264"
            >
              <div
                class="awsui_restore-pointer-events_14yj0_1lwse_314"
              >
                <div
                  class="awsui_control_14mhv_av9zi_246"
                >
                  <div
                    class="awsui_grid_14yj0_1lwse_99"
                  >
                    <div
                      class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-2_14yj0_1lwse_164"
                    >
                      <div
                        class="awsui_restore-pointer-events_14yj0_1lwse_314"
                      >
                        <div
                          class="sc-aXZVg ixMKHR"
                          data-testid="foreground-color-swatch"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="awsui_child_18582_z63vw_103"
    >
      <div
        data-mocked="ColorPicker"
      >
        {"color":"blue"}
      </div>
    </div>
  </div>
</div>
`;

exports[`ColorEditor > should render correctly for background color without data binding 1`] = `
<div>
  <div
    class="awsui_root_18582_z63vw_99 awsui_vertical_18582_z63vw_146 awsui_vertical-s_18582_z63vw_158"
  >
    <div
      class="awsui_child_18582_z63vw_103"
    >
      <div
        class="awsui_root_14mhv_av9zi_174"
        data-analytics-field-label="[id="formField:rc:-label"]"
      >
        <div
          class=""
        >
          <label
            class="awsui_label_14mhv_av9zi_210"
            for="formField:rc:"
            id="formField:rc:-label"
          >
            Define background color
          </label>
        </div>
        <div
          class="awsui_controls_14mhv_av9zi_246"
        >
          <div
            class="awsui_grid_14yj0_1lwse_99"
          >
            <div
              class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-12_14yj0_1lwse_264"
            >
              <div
                class="awsui_restore-pointer-events_14yj0_1lwse_314"
              >
                <div
                  class="awsui_control_14mhv_av9zi_246"
                >
                  <div
                    class="awsui_root_r2vco_wvvus_99"
                    data-testid="motion-indicator-color-select"
                  >
                    <div
                      class="awsui_root_qwoo0_1ea5w_149"
                    >
                      <div
                        class=""
                        id=":ri:"
                      >
                        <button
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-labelledby="formField:rc:-label select-arialabel-:rg: trigger-content-:rk:"
                          class="awsui_button-trigger_18eso_syr88_103 awsui_has-caret_18eso_syr88_170"
                          id="formField:rc:"
                          type="button"
                        >
                          <span
                            class="awsui_trigger_dwuol_18z0d_122"
                            id="trigger-content-:rk:"
                          >
                            Select color
                          </span>
                          <span
                            class="awsui_arrow_18eso_syr88_103"
                          >
                            <span
                              class="awsui_icon_h11ix_1l964_104 awsui_size-normal-mapped-height_h11ix_1l964_158 awsui_size-normal_h11ix_1l964_154 awsui_variant-normal_h11ix_1l964_230"
                            >
                              <svg
                                aria-hidden="true"
                                focusable="false"
                                viewBox="0 0 16 16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  class="filled stroke-linejoin-round"
                                  d="M4 5h8l-4 6-4-6z"
                                />
                              </svg>
                            </span>
                          </span>
                        </button>
                      </div>
                      <div
                        tabindex="-1"
                      />
                      <div>
                        <div
                          tabindex="-1"
                        />
                        <div
                          aria-hidden="true"
                          class="awsui_dropdown_qwoo0_1ea5w_99 awsui-visual-refresh awsui_hide-block-border_qwoo0_1ea5w_281 awsui_refresh_qwoo0_1ea5w_120 awsui_stretch-beyond-trigger-width_qwoo0_1ea5w_277"
                          data-animating="false"
                          data-open="false"
                          id="dialog:rf:"
                          style="--awsui-dropdown-default-max-width-iof9y8: 465px;"
                        >
                          <div
                            class="awsui_dropdown-content-wrapper_qwoo0_1ea5w_99 awsui_refresh_qwoo0_1ea5w_120"
                          >
                            <div
                              class="awsui_dropdown-content_qwoo0_1ea5w_99"
                            >
                              <ul
                                aria-labelledby="select-arialabel-:rg: formField:rc:"
                                class="awsui_options-list_19gcf_halkh_99"
                                id="option-list:re:"
                                role="listbox"
                                style="position: relative;"
                                tabindex="-1"
                              />
                              <div
                                class="awsui_root_1afi9_5kqbd_99 awsui_hidden_1afi9_5kqbd_133"
                              >
                                <div
                                  id="footer:rh:"
                                />
                                <span
                                  class="awsui_root_xttbq_pgwjg_99 awsui_root_3bgfn_im8v7_5"
                                >
                                  <span
                                    aria-atomic="true"
                                    aria-live="polite"
                                  />
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          tabindex="-1"
                        />
                      </div>
                    </div>
                    <span
                      class="awsui_root_xttbq_pgwjg_99"
                      id="select-arialabel-:rg:"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="awsui_child_18582_z63vw_103"
    >
      <div
        class="awsui_root_14mhv_av9zi_174"
        data-analytics-field-label="[id="formField:rl:-label"]"
      >
        <div
          class=""
        >
          <label
            class="awsui_label_14mhv_av9zi_210"
            for="formField:rl:"
            id="formField:rl:-label"
          >
            Background
          </label>
        </div>
        <div
          class="awsui_controls_14mhv_av9zi_246"
        >
          <div
            class="awsui_grid_14yj0_1lwse_99"
          >
            <div
              class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-12_14yj0_1lwse_264"
            >
              <div
                class="awsui_restore-pointer-events_14yj0_1lwse_314"
              >
                <div
                  class="awsui_control_14mhv_av9zi_246"
                >
                  <div
                    class="awsui_grid_14yj0_1lwse_99"
                  >
                    <div
                      class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-2_14yj0_1lwse_164"
                    >
                      <div
                        class="awsui_restore-pointer-events_14yj0_1lwse_314"
                      >
                        <div
                          class="sc-aXZVg jqdByc"
                          data-testid="background-color-swatch"
                        />
                      </div>
                    </div>
                    <div
                      class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-10_14yj0_1lwse_244"
                    >
                      <div
                        class="awsui_restore-pointer-events_14yj0_1lwse_314"
                      >
                        <button
                          class="awsui_button_vjswe_12tek_107 awsui_variant-normal_vjswe_12tek_158"
                          data-analytics-funnel-value="button:rm:"
                          data-testid="opacity-button"
                          type="submit"
                        >
                          <span
                            class="awsui_content_vjswe_12tek_103"
                          >
                            Opacity : 50%
                            <div
                              class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_m-left-xs_18wu0_1elzt_881 awsui_d-inline_18wu0_1elzt_1039 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                            >
                              <span
                                class="awsui_icon_h11ix_1l964_104 awsui_size-normal-mapped-height_h11ix_1l964_158 awsui_size-normal_h11ix_1l964_154 awsui_variant-normal_h11ix_1l964_230 awsui_name-caret-right-filled_h11ix_1l964_260"
                              >
                                <svg
                                  aria-hidden="true"
                                  focusable="false"
                                  viewBox="0 0 16 16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    class="filled stroke-linejoin-round"
                                    d="M5 4v8l6-4-6-4z"
                                  />
                                </svg>
                              </span>
                            </div>
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                  <div
                    class="awsui_grid_14yj0_1lwse_99"
                  >
                    <div
                      class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-2_14yj0_1lwse_164"
                    >
                      <div
                        class="awsui_restore-pointer-events_14yj0_1lwse_314"
                      >
                        <div
                          class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ColorEditor > should render correctly for background color without data binding 2`] = `
<div>
  <div
    class="awsui_root_18582_z63vw_99 awsui_vertical_18582_z63vw_146 awsui_vertical-s_18582_z63vw_158"
  >
    <div
      class="awsui_child_18582_z63vw_103"
    >
      <div
        class="awsui_root_14mhv_av9zi_174"
        data-analytics-field-label="[id="formField:rc:-label"]"
      >
        <div
          class=""
        >
          <label
            class="awsui_label_14mhv_av9zi_210"
            for="formField:rc:"
            id="formField:rc:-label"
          >
            Define background color
          </label>
        </div>
        <div
          class="awsui_controls_14mhv_av9zi_246"
        >
          <div
            class="awsui_grid_14yj0_1lwse_99"
          >
            <div
              class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-12_14yj0_1lwse_264"
            >
              <div
                class="awsui_restore-pointer-events_14yj0_1lwse_314"
              >
                <div
                  class="awsui_control_14mhv_av9zi_246"
                >
                  <div
                    class="awsui_root_r2vco_wvvus_99"
                    data-testid="motion-indicator-color-select"
                  >
                    <div
                      class="awsui_root_qwoo0_1ea5w_149"
                    >
                      <div
                        class=""
                        id=":ri:"
                      >
                        <button
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-labelledby="formField:rc:-label select-arialabel-:rg: trigger-content-:rk:"
                          class="awsui_button-trigger_18eso_syr88_103 awsui_has-caret_18eso_syr88_170"
                          id="formField:rc:"
                          type="button"
                        >
                          <span
                            class="awsui_trigger_dwuol_18z0d_122"
                            id="trigger-content-:rk:"
                          >
                            Select color
                          </span>
                          <span
                            class="awsui_arrow_18eso_syr88_103"
                          >
                            <span
                              class="awsui_icon_h11ix_1l964_104 awsui_size-normal-mapped-height_h11ix_1l964_158 awsui_size-normal_h11ix_1l964_154 awsui_variant-normal_h11ix_1l964_230"
                            >
                              <svg
                                aria-hidden="true"
                                focusable="false"
                                viewBox="0 0 16 16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  class="filled stroke-linejoin-round"
                                  d="M4 5h8l-4 6-4-6z"
                                />
                              </svg>
                            </span>
                          </span>
                        </button>
                      </div>
                      <div
                        tabindex="-1"
                      />
                      <div>
                        <div
                          tabindex="-1"
                        />
                        <div
                          aria-hidden="true"
                          class="awsui_dropdown_qwoo0_1ea5w_99 awsui-visual-refresh awsui_hide-block-border_qwoo0_1ea5w_281 awsui_refresh_qwoo0_1ea5w_120 awsui_stretch-beyond-trigger-width_qwoo0_1ea5w_277"
                          data-animating="false"
                          data-open="false"
                          id="dialog:rf:"
                          style="--awsui-dropdown-default-max-width-iof9y8: 465px;"
                        >
                          <div
                            class="awsui_dropdown-content-wrapper_qwoo0_1ea5w_99 awsui_refresh_qwoo0_1ea5w_120"
                          >
                            <div
                              class="awsui_dropdown-content_qwoo0_1ea5w_99"
                            >
                              <ul
                                aria-labelledby="select-arialabel-:rg: formField:rc:"
                                class="awsui_options-list_19gcf_halkh_99"
                                id="option-list:re:"
                                role="listbox"
                                style="position: relative;"
                                tabindex="-1"
                              />
                              <div
                                class="awsui_root_1afi9_5kqbd_99 awsui_hidden_1afi9_5kqbd_133"
                              >
                                <div
                                  id="footer:rh:"
                                />
                                <span
                                  class="awsui_root_xttbq_pgwjg_99 awsui_root_3bgfn_im8v7_5"
                                >
                                  <span
                                    aria-atomic="true"
                                    aria-live="polite"
                                  />
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          tabindex="-1"
                        />
                      </div>
                    </div>
                    <span
                      class="awsui_root_xttbq_pgwjg_99"
                      id="select-arialabel-:rg:"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="awsui_child_18582_z63vw_103"
    >
      <div
        class="awsui_root_14mhv_av9zi_174"
        data-analytics-field-label="[id="formField:rl:-label"]"
      >
        <div
          class=""
        >
          <label
            class="awsui_label_14mhv_av9zi_210"
            for="formField:rl:"
            id="formField:rl:-label"
          >
            Background
          </label>
        </div>
        <div
          class="awsui_controls_14mhv_av9zi_246"
        >
          <div
            class="awsui_grid_14yj0_1lwse_99"
          >
            <div
              class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-12_14yj0_1lwse_264"
            >
              <div
                class="awsui_restore-pointer-events_14yj0_1lwse_314"
              >
                <div
                  class="awsui_control_14mhv_av9zi_246"
                >
                  <div
                    class="awsui_grid_14yj0_1lwse_99"
                  >
                    <div
                      class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-2_14yj0_1lwse_164"
                    >
                      <div
                        class="awsui_restore-pointer-events_14yj0_1lwse_314"
                      >
                        <div
                          class="sc-aXZVg jqdByc"
                          data-testid="background-color-swatch"
                        />
                      </div>
                    </div>
                    <div
                      class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-10_14yj0_1lwse_244"
                    >
                      <div
                        class="awsui_restore-pointer-events_14yj0_1lwse_314"
                      >
                        <button
                          class="awsui_button_vjswe_12tek_107 awsui_variant-normal_vjswe_12tek_158"
                          data-analytics-funnel-value="button:rm:"
                          data-testid="opacity-button"
                          type="submit"
                        >
                          <span
                            class="awsui_content_vjswe_12tek_103"
                          >
                            Opacity : 50%
                            <div
                              class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_m-left-xs_18wu0_1elzt_881 awsui_d-inline_18wu0_1elzt_1039 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                            >
                              <span
                                class="awsui_icon_h11ix_1l964_104 awsui_size-normal-mapped-height_h11ix_1l964_158 awsui_size-normal_h11ix_1l964_154 awsui_variant-normal_h11ix_1l964_230"
                              >
                                <svg
                                  aria-hidden="true"
                                  focusable="false"
                                  viewBox="0 0 16 16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    class="filled stroke-linejoin-round"
                                    d="M4 5h8l-4 6-4-6z"
                                  />
                                </svg>
                              </span>
                            </div>
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                  <div
                    class="awsui_grid_14yj0_1lwse_99"
                  >
                    <div
                      class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-2_14yj0_1lwse_164"
                    >
                      <div
                        class="awsui_restore-pointer-events_14yj0_1lwse_314"
                      >
                        <div
                          class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                        />
                      </div>
                    </div>
                    <div
                      class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-10_14yj0_1lwse_244"
                    >
                      <div
                        class="awsui_restore-pointer-events_14yj0_1lwse_314"
                      >
                        <div
                          data-testid="Slider"
                        >
                          [{"value":50,"step":1,"min":"0","max":"100"},{}]
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ColorEditor > should render correctly for foreground color with  color picker shown 1`] = `
<div>
  <div
    class="awsui_root_18582_z63vw_99 awsui_vertical_18582_z63vw_146 awsui_vertical-s_18582_z63vw_158"
  >
    <div
      class="awsui_child_18582_z63vw_103"
    >
      <div
        class="awsui_root_14mhv_av9zi_174"
        data-analytics-field-label="[id="formField:r1o:-label"]"
      >
        <div
          class=""
        >
          <label
            class="awsui_label_14mhv_av9zi_210"
            for="formField:r1o:"
            id="formField:r1o:-label"
          >
            Define arrow color
          </label>
        </div>
        <div
          class="awsui_controls_14mhv_av9zi_246"
        >
          <div
            class="awsui_grid_14yj0_1lwse_99"
          >
            <div
              class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-12_14yj0_1lwse_264"
            >
              <div
                class="awsui_restore-pointer-events_14yj0_1lwse_314"
              >
                <div
                  class="awsui_control_14mhv_av9zi_246"
                >
                  <div
                    class="awsui_root_r2vco_wvvus_99"
                    data-testid="motion-indicator-color-select"
                  >
                    <div
                      class="awsui_root_qwoo0_1ea5w_149"
                    >
                      <div
                        class=""
                        id=":r1u:"
                      >
                        <button
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-labelledby="formField:r1o:-label select-arialabel-:r1s: trigger-content-:r20:"
                          class="awsui_button-trigger_18eso_syr88_103 awsui_has-caret_18eso_syr88_170"
                          id="formField:r1o:"
                          type="button"
                        >
                          <span
                            class="awsui_trigger_dwuol_18z0d_122"
                            id="trigger-content-:r20:"
                          >
                            Select color
                          </span>
                          <span
                            class="awsui_arrow_18eso_syr88_103"
                          >
                            <span
                              class="awsui_icon_h11ix_1l964_104 awsui_size-normal-mapped-height_h11ix_1l964_158 awsui_size-normal_h11ix_1l964_154 awsui_variant-normal_h11ix_1l964_230"
                            >
                              <svg
                                aria-hidden="true"
                                focusable="false"
                                viewBox="0 0 16 16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  class="filled stroke-linejoin-round"
                                  d="M4 5h8l-4 6-4-6z"
                                />
                              </svg>
                            </span>
                          </span>
                        </button>
                      </div>
                      <div
                        tabindex="-1"
                      />
                      <div>
                        <div
                          tabindex="-1"
                        />
                        <div
                          aria-hidden="true"
                          class="awsui_dropdown_qwoo0_1ea5w_99 awsui-visual-refresh awsui_hide-block-border_qwoo0_1ea5w_281 awsui_refresh_qwoo0_1ea5w_120 awsui_stretch-beyond-trigger-width_qwoo0_1ea5w_277"
                          data-animating="false"
                          data-open="false"
                          id="dialog:r1r:"
                          style="--awsui-dropdown-default-max-width-iof9y8: 465px;"
                        >
                          <div
                            class="awsui_dropdown-content-wrapper_qwoo0_1ea5w_99 awsui_refresh_qwoo0_1ea5w_120"
                          >
                            <div
                              class="awsui_dropdown-content_qwoo0_1ea5w_99"
                            >
                              <ul
                                aria-labelledby="select-arialabel-:r1s: formField:r1o:"
                                class="awsui_options-list_19gcf_halkh_99"
                                id="option-list:r1q:"
                                role="listbox"
                                style="position: relative;"
                                tabindex="-1"
                              />
                              <div
                                class="awsui_root_1afi9_5kqbd_99 awsui_hidden_1afi9_5kqbd_133"
                              >
                                <div
                                  id="footer:r1t:"
                                />
                                <span
                                  class="awsui_root_xttbq_pgwjg_99 awsui_root_3bgfn_im8v7_5"
                                >
                                  <span
                                    aria-atomic="true"
                                    aria-live="polite"
                                  />
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          tabindex="-1"
                        />
                      </div>
                    </div>
                    <span
                      class="awsui_root_xttbq_pgwjg_99"
                      id="select-arialabel-:r1s:"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="awsui_child_18582_z63vw_103"
    >
      <div
        class="awsui_root_14mhv_av9zi_174"
        data-analytics-field-label="[id="formField:r21:-label"]"
      >
        <div
          class=""
        >
          <label
            class="awsui_label_14mhv_av9zi_210"
            for="formField:r21:"
            id="formField:r21:-label"
          >
            Arrow color
          </label>
        </div>
        <div
          class="awsui_controls_14mhv_av9zi_246"
        >
          <div
            class="awsui_grid_14yj0_1lwse_99"
          >
            <div
              class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-12_14yj0_1lwse_264"
            >
              <div
                class="awsui_restore-pointer-events_14yj0_1lwse_314"
              >
                <div
                  class="awsui_control_14mhv_av9zi_246"
                >
                  <div
                    class="awsui_grid_14yj0_1lwse_99"
                  >
                    <div
                      class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-2_14yj0_1lwse_164"
                    >
                      <div
                        class="awsui_restore-pointer-events_14yj0_1lwse_314"
                      >
                        <div
                          class="sc-aXZVg ixMKHR"
                          data-testid="foreground-color-swatch"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="awsui_child_18582_z63vw_103"
    >
      <div
        data-mocked="ColorPicker"
      >
        {"color":"blue"}
      </div>
    </div>
  </div>
</div>
`;

exports[`ColorEditor > should render correctly for foreground color with  color picker shown 2`] = `
<div>
  <div
    class="awsui_root_18582_z63vw_99 awsui_vertical_18582_z63vw_146 awsui_vertical-s_18582_z63vw_158"
  >
    <div
      class="awsui_child_18582_z63vw_103"
    >
      <div
        class="awsui_root_14mhv_av9zi_174"
        data-analytics-field-label="[id="formField:r1o:-label"]"
      >
        <div
          class=""
        >
          <label
            class="awsui_label_14mhv_av9zi_210"
            for="formField:r1o:"
            id="formField:r1o:-label"
          >
            Define arrow color
          </label>
        </div>
        <div
          class="awsui_controls_14mhv_av9zi_246"
        >
          <div
            class="awsui_grid_14yj0_1lwse_99"
          >
            <div
              class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-12_14yj0_1lwse_264"
            >
              <div
                class="awsui_restore-pointer-events_14yj0_1lwse_314"
              >
                <div
                  class="awsui_control_14mhv_av9zi_246"
                >
                  <div
                    class="awsui_root_r2vco_wvvus_99"
                    data-testid="motion-indicator-color-select"
                  >
                    <div
                      class="awsui_root_qwoo0_1ea5w_149"
                    >
                      <div
                        class=""
                        id=":r1u:"
                      >
                        <button
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-labelledby="formField:r1o:-label select-arialabel-:r1s: trigger-content-:r20:"
                          class="awsui_button-trigger_18eso_syr88_103 awsui_has-caret_18eso_syr88_170"
                          id="formField:r1o:"
                          type="button"
                        >
                          <span
                            class="awsui_trigger_dwuol_18z0d_122"
                            id="trigger-content-:r20:"
                          >
                            Select color
                          </span>
                          <span
                            class="awsui_arrow_18eso_syr88_103"
                          >
                            <span
                              class="awsui_icon_h11ix_1l964_104 awsui_size-normal-mapped-height_h11ix_1l964_158 awsui_size-normal_h11ix_1l964_154 awsui_variant-normal_h11ix_1l964_230"
                            >
                              <svg
                                aria-hidden="true"
                                focusable="false"
                                viewBox="0 0 16 16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  class="filled stroke-linejoin-round"
                                  d="M4 5h8l-4 6-4-6z"
                                />
                              </svg>
                            </span>
                          </span>
                        </button>
                      </div>
                      <div
                        tabindex="-1"
                      />
                      <div>
                        <div
                          tabindex="-1"
                        />
                        <div
                          aria-hidden="true"
                          class="awsui_dropdown_qwoo0_1ea5w_99 awsui-visual-refresh awsui_hide-block-border_qwoo0_1ea5w_281 awsui_refresh_qwoo0_1ea5w_120 awsui_stretch-beyond-trigger-width_qwoo0_1ea5w_277"
                          data-animating="false"
                          data-open="false"
                          id="dialog:r1r:"
                          style="--awsui-dropdown-default-max-width-iof9y8: 465px;"
                        >
                          <div
                            class="awsui_dropdown-content-wrapper_qwoo0_1ea5w_99 awsui_refresh_qwoo0_1ea5w_120"
                          >
                            <div
                              class="awsui_dropdown-content_qwoo0_1ea5w_99"
                            >
                              <ul
                                aria-labelledby="select-arialabel-:r1s: formField:r1o:"
                                class="awsui_options-list_19gcf_halkh_99"
                                id="option-list:r1q:"
                                role="listbox"
                                style="position: relative;"
                                tabindex="-1"
                              />
                              <div
                                class="awsui_root_1afi9_5kqbd_99 awsui_hidden_1afi9_5kqbd_133"
                              >
                                <div
                                  id="footer:r1t:"
                                />
                                <span
                                  class="awsui_root_xttbq_pgwjg_99 awsui_root_3bgfn_im8v7_5"
                                >
                                  <span
                                    aria-atomic="true"
                                    aria-live="polite"
                                  />
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          tabindex="-1"
                        />
                      </div>
                    </div>
                    <span
                      class="awsui_root_xttbq_pgwjg_99"
                      id="select-arialabel-:r1s:"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="awsui_child_18582_z63vw_103"
    >
      <div
        class="awsui_root_14mhv_av9zi_174"
        data-analytics-field-label="[id="formField:r21:-label"]"
      >
        <div
          class=""
        >
          <label
            class="awsui_label_14mhv_av9zi_210"
            for="formField:r21:"
            id="formField:r21:-label"
          >
            Arrow color
          </label>
        </div>
        <div
          class="awsui_controls_14mhv_av9zi_246"
        >
          <div
            class="awsui_grid_14yj0_1lwse_99"
          >
            <div
              class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-12_14yj0_1lwse_264"
            >
              <div
                class="awsui_restore-pointer-events_14yj0_1lwse_314"
              >
                <div
                  class="awsui_control_14mhv_av9zi_246"
                >
                  <div
                    class="awsui_grid_14yj0_1lwse_99"
                  >
                    <div
                      class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-2_14yj0_1lwse_164"
                    >
                      <div
                        class="awsui_restore-pointer-events_14yj0_1lwse_314"
                      >
                        <div
                          class="sc-aXZVg ixMKHR"
                          data-testid="foreground-color-swatch"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ColorEditor > should render correctly for foreground color with data binding 1`] = `
<div>
  <div
    class="awsui_root_18582_z63vw_99 awsui_vertical_18582_z63vw_146 awsui_vertical-s_18582_z63vw_158"
  >
    <div
      class="awsui_child_18582_z63vw_103"
    >
      <div
        class="awsui_root_14mhv_av9zi_174"
        data-analytics-field-label="[id="formField:r15:-label"]"
      >
        <div
          class=""
        >
          <label
            class="awsui_label_14mhv_av9zi_210"
            for="formField:r15:"
            id="formField:r15:-label"
          >
            Define arrow color
          </label>
        </div>
        <div
          class="awsui_controls_14mhv_av9zi_246"
        >
          <div
            class="awsui_grid_14yj0_1lwse_99"
          >
            <div
              class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-12_14yj0_1lwse_264"
            >
              <div
                class="awsui_restore-pointer-events_14yj0_1lwse_314"
              >
                <div
                  class="awsui_control_14mhv_av9zi_246"
                >
                  <div
                    class="awsui_root_r2vco_wvvus_99"
                    data-testid="motion-indicator-color-select"
                  >
                    <div
                      class="awsui_root_qwoo0_1ea5w_149"
                    >
                      <div
                        class=""
                        id=":r1b:"
                      >
                        <button
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-labelledby="formField:r15:-label select-arialabel-:r19: trigger-content-:r1d:"
                          class="awsui_button-trigger_18eso_syr88_103 awsui_has-caret_18eso_syr88_170"
                          id="formField:r15:"
                          type="button"
                        >
                          <span
                            class="awsui_trigger_dwuol_18z0d_122"
                            id="trigger-content-:r1d:"
                          >
                            Add color rule
                          </span>
                          <span
                            class="awsui_arrow_18eso_syr88_103"
                          >
                            <span
                              class="awsui_icon_h11ix_1l964_104 awsui_size-normal-mapped-height_h11ix_1l964_158 awsui_size-normal_h11ix_1l964_154 awsui_variant-normal_h11ix_1l964_230"
                            >
                              <svg
                                aria-hidden="true"
                                focusable="false"
                                viewBox="0 0 16 16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  class="filled stroke-linejoin-round"
                                  d="M4 5h8l-4 6-4-6z"
                                />
                              </svg>
                            </span>
                          </span>
                        </button>
                      </div>
                      <div
                        tabindex="-1"
                      />
                      <div>
                        <div
                          tabindex="-1"
                        />
                        <div
                          aria-hidden="true"
                          class="awsui_dropdown_qwoo0_1ea5w_99 awsui-visual-refresh awsui_hide-block-border_qwoo0_1ea5w_281 awsui_refresh_qwoo0_1ea5w_120 awsui_stretch-beyond-trigger-width_qwoo0_1ea5w_277"
                          data-animating="false"
                          data-open="false"
                          id="dialog:r18:"
                          style="--awsui-dropdown-default-max-width-iof9y8: 465px;"
                        >
                          <div
                            class="awsui_dropdown-content-wrapper_qwoo0_1ea5w_99 awsui_refresh_qwoo0_1ea5w_120"
                          >
                            <div
                              class="awsui_dropdown-content_qwoo0_1ea5w_99"
                            >
                              <ul
                                aria-labelledby="select-arialabel-:r19: formField:r15:"
                                class="awsui_options-list_19gcf_halkh_99"
                                id="option-list:r17:"
                                role="listbox"
                                style="position: relative;"
                                tabindex="-1"
                              />
                              <div
                                class="awsui_root_1afi9_5kqbd_99 awsui_hidden_1afi9_5kqbd_133"
                              >
                                <div
                                  id="footer:r1a:"
                                />
                                <span
                                  class="awsui_root_xttbq_pgwjg_99 awsui_root_3bgfn_im8v7_5"
                                >
                                  <span
                                    aria-atomic="true"
                                    aria-live="polite"
                                  />
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          tabindex="-1"
                        />
                      </div>
                    </div>
                    <span
                      class="awsui_root_xttbq_pgwjg_99"
                      id="select-arialabel-:r19:"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="awsui_child_18582_z63vw_103"
    >
      <div
        class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_p-top-s_18wu0_1elzt_641 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-bold_18wu0_1elzt_414"
      >
        Configure Rule
      </div>
    </div>
    <div
      class="awsui_child_18582_z63vw_103"
    >
      <div
        data-testid="DataBindingEditor"
      >
        [{"component":{"ref":"componentRef1","type":"MotionIndicator","uri":"componentUri","modelType":"componentModelType","shape":"LinearPlane","valueDataBindings":{"backgroundColor":{"ruleBasedMapId":"rule-1"},"foregroundColor":{"ruleBasedMapId":"rule-2"}},"config":{"numOfRepeatInY":4,"backgroundColorOpacity":0.5,"defaultBackgroundColor":"red","defaultForegroundColor":"blue"}},"dataBindingName":"foregroundColor"},{}]
      </div>
    </div>
  </div>
</div>
`;

exports[`ColorEditor > should render correctly for foreground color without data binding 1`] = `
<div>
  <div
    class="awsui_root_18582_z63vw_99 awsui_vertical_18582_z63vw_146 awsui_vertical-s_18582_z63vw_158"
  >
    <div
      class="awsui_child_18582_z63vw_103"
    >
      <div
        class="awsui_root_14mhv_av9zi_174"
        data-analytics-field-label="[id="formField:r1e:-label"]"
      >
        <div
          class=""
        >
          <label
            class="awsui_label_14mhv_av9zi_210"
            for="formField:r1e:"
            id="formField:r1e:-label"
          >
            Define arrow color
          </label>
        </div>
        <div
          class="awsui_controls_14mhv_av9zi_246"
        >
          <div
            class="awsui_grid_14yj0_1lwse_99"
          >
            <div
              class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-12_14yj0_1lwse_264"
            >
              <div
                class="awsui_restore-pointer-events_14yj0_1lwse_314"
              >
                <div
                  class="awsui_control_14mhv_av9zi_246"
                >
                  <div
                    class="awsui_root_r2vco_wvvus_99"
                    data-testid="motion-indicator-color-select"
                  >
                    <div
                      class="awsui_root_qwoo0_1ea5w_149"
                    >
                      <div
                        class=""
                        id=":r1k:"
                      >
                        <button
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-labelledby="formField:r1e:-label select-arialabel-:r1i: trigger-content-:r1m:"
                          class="awsui_button-trigger_18eso_syr88_103 awsui_has-caret_18eso_syr88_170"
                          id="formField:r1e:"
                          type="button"
                        >
                          <span
                            class="awsui_trigger_dwuol_18z0d_122"
                            id="trigger-content-:r1m:"
                          >
                            Select color
                          </span>
                          <span
                            class="awsui_arrow_18eso_syr88_103"
                          >
                            <span
                              class="awsui_icon_h11ix_1l964_104 awsui_size-normal-mapped-height_h11ix_1l964_158 awsui_size-normal_h11ix_1l964_154 awsui_variant-normal_h11ix_1l964_230"
                            >
                              <svg
                                aria-hidden="true"
                                focusable="false"
                                viewBox="0 0 16 16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  class="filled stroke-linejoin-round"
                                  d="M4 5h8l-4 6-4-6z"
                                />
                              </svg>
                            </span>
                          </span>
                        </button>
                      </div>
                      <div
                        tabindex="-1"
                      />
                      <div>
                        <div
                          tabindex="-1"
                        />
                        <div
                          aria-hidden="true"
                          class="awsui_dropdown_qwoo0_1ea5w_99 awsui-visual-refresh awsui_hide-block-border_qwoo0_1ea5w_281 awsui_refresh_qwoo0_1ea5w_120 awsui_stretch-beyond-trigger-width_qwoo0_1ea5w_277"
                          data-animating="false"
                          data-open="false"
                          id="dialog:r1h:"
                          style="--awsui-dropdown-default-max-width-iof9y8: 465px;"
                        >
                          <div
                            class="awsui_dropdown-content-wrapper_qwoo0_1ea5w_99 awsui_refresh_qwoo0_1ea5w_120"
                          >
                            <div
                              class="awsui_dropdown-content_qwoo0_1ea5w_99"
                            >
                              <ul
                                aria-labelledby="select-arialabel-:r1i: formField:r1e:"
                                class="awsui_options-list_19gcf_halkh_99"
                                id="option-list:r1g:"
                                role="listbox"
                                style="position: relative;"
                                tabindex="-1"
                              />
                              <div
                                class="awsui_root_1afi9_5kqbd_99 awsui_hidden_1afi9_5kqbd_133"
                              >
                                <div
                                  id="footer:r1j:"
                                />
                                <span
                                  class="awsui_root_xttbq_pgwjg_99 awsui_root_3bgfn_im8v7_5"
                                >
                                  <span
                                    aria-atomic="true"
                                    aria-live="polite"
                                  />
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          tabindex="-1"
                        />
                      </div>
                    </div>
                    <span
                      class="awsui_root_xttbq_pgwjg_99"
                      id="select-arialabel-:r1i:"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="awsui_child_18582_z63vw_103"
    >
      <div
        class="awsui_root_14mhv_av9zi_174"
        data-analytics-field-label="[id="formField:r1n:-label"]"
      >
        <div
          class=""
        >
          <label
            class="awsui_label_14mhv_av9zi_210"
            for="formField:r1n:"
            id="formField:r1n:-label"
          >
            Arrow color
          </label>
        </div>
        <div
          class="awsui_controls_14mhv_av9zi_246"
        >
          <div
            class="awsui_grid_14yj0_1lwse_99"
          >
            <div
              class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-12_14yj0_1lwse_264"
            >
              <div
                class="awsui_restore-pointer-events_14yj0_1lwse_314"
              >
                <div
                  class="awsui_control_14mhv_av9zi_246"
                >
                  <div
                    class="awsui_grid_14yj0_1lwse_99"
                  >
                    <div
                      class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-2_14yj0_1lwse_164"
                    >
                      <div
                        class="awsui_restore-pointer-events_14yj0_1lwse_314"
                      >
                        <div
                          class="sc-aXZVg ixMKHR"
                          data-testid="foreground-color-swatch"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
